--- a/src/scss/partials/layouts/_mediaCarousel.scss
+++ b/src/scss/partials/layouts/_mediaCarousel.scss
@@ -7,6 +7,7 @@
 }
 .sliderAndButtonWrap {
     position: relative;
+    @include sidePaddingForCarouselAndTitle;
 }
 
 .mediaNextButton {
@@ -114,7 +115,7 @@
     z-index: 1;
     position: absolute;
     top: 0.2rem;
-    right: 0;
+    right: 0.4rem;
     cursor: pointer;
     color: white;
     font-size: 1.2rem;
@@ -122,10 +123,11 @@
     @media screen and (min-width: $sm_breakpoint) {
         font-size: 1.8rem;
         top: 0.5rem;
-        right: 0.3rem;
+        right: 0.5rem;
     }
     @media screen and (min-width: $md_breakpoint) {
         top: 0.8rem;
+        right: 0.7rem;
     }
 
     @media screen and (min-width: $lg_breakpoint) {
